--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
   <main class="container">
     <div id="display">0</div>
     <button id="btn-clear" class="top-3-btn" type="button" value="c">C</button>
-    <button class="top-3-btn" type="button" value="">+/-</button>
-    <button class="top-3-btn" type="button" value="">&percnt;</button>
+    <button id="btn-sign" class="top-3-btn" type="button" value="">+/-</button>
+    <button id="btn-percent" class="top-3-btn" type="button" value="">&percnt;</button>
     <button class="operator" type="button" value="/">&divide;</button>
-    <button class="operand" type="button" value="7">7</button>
-    <button class="operand" type="button" value="8">8</button>
-    <button class="operand" type="button" value="9">9</button>
+    <button class="number" type="button" value="7">7</button>
+    <button class="number" type="button" value="8">8</button>
+    <button class="number" type="button" value="9">9</button>
     <button class="operator" type="button" value="*">&times;</button>
-    <button class="operand" type="button" value="4">4</button>
-    <button class="operand" type="button" value="5">5</button>
-    <button class="operand" type="button" value="6">6</button>
+    <button class="number" type="button" value="4">4</button>
+    <button class="number" type="button" value="5">5</button>
+    <button class="number" type="button" value="6">6</button>
     <button class="operator" type="button" value="-">&minus;</button>
-    <button class="operand" type="button" value="1">1</button>
-    <button class="operand" type="button" value="2">2</button>
-    <button class="operand" type="button" value="3">3</button>
+    <button class="number" type="button" value="1">1</button>
+    <button class="number" type="button" value="2">2</button>
+    <button class="number" type="button" value="3">3</button>
     <button class="operator" type="button" value="+">&plus;</button>
-    <button class="operand" id="btn-zero" type="button" value="0">0</button>
-    <button id="btn-decimal" class="operand" type="button" value=".">.</button>
-    <button id="btn-equal" type="button">&equals;</button>
+    <button class="number" id="btn-zero" type="button" value="0">0</button>
+    <button class="number" type="button" value=".">.</button>
+    <button id="btn-equal" type="button" value="=">&equals;</button>
   </main>
   
 </body>
